--- a/examples/antd_rtl.html
+++ b/examples/antd_rtl.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>selectedKeys.js - example - rnb-rc-menu@7.4.28</title>
+  <title>antd_rtl.js - example - rnb-rc-menu@7.4.28</title>
   <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta charset="utf-8"/>
@@ -273,155 +273,239 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
 
 import React from "react";
 import ReactDOM from "react-dom";
-import Menu, { SubMenu, Item as MenuItem } from "rnb-rc-menu";
-
+import PropTypes from "prop-types";
+import Menu, { SubMenu, Item as MenuItem, Divider } from "rnb-rc-menu";
 import "rnb-rc-menu/assets/index.css";
+import animate from "css-animation";
 
-class Test extends React.Component {
-  state = {
-    destroyed: false,
-    selectedKeys: [],
-    openKeys: []
-  };
+function handleClick(info) {
+  console.log(`clicked ${info.key}`);
+  console.log(info);
+}
 
-  onSelect = info =&gt; {
-    console.log("selected ", info);
-    this.setState({
-      selectedKeys: info.selectedKeys
+const animation = {
+  enter(node, done) {
+    let height;
+    return animate(node, "rc-menu-collapse", {
+      start() {
+        height = node.offsetHeight;
+        node.style.height = 0;
+      },
+      active() {
+        node.style.height = `${height}px`;
+      },
+      end() {
+        node.style.height = "";
+        done();
+      }
     });
-  };
+  },
 
-  onDeselect(info) {
-    console.log("deselect ", info);
+  appear() {
+    return this.enter.apply(this, arguments);
+  },
+
+  leave(node, done) {
+    return animate(node, "rc-menu-collapse", {
+      start() {
+        node.style.height = `${node.offsetHeight}px`;
+      },
+      active() {
+        node.style.height = 0;
+      },
+      end() {
+        node.style.height = "";
+        done();
+      }
+    });
   }
+};
 
-  onOpenChange = openKeys =&gt; {
-    console.log("onOpenChange ", openKeys);
-    this.setState({
-      openKeys
-    });
-  };
+const reactContainer = document.getElementById("__react-content");
 
-  onCheck = e =&gt; {
-    const value = e.target.value;
-    if (e.target.checked) {
-      this.setState(state =&gt; ({
-        selectedKeys: state.selectedKeys.concat(value)
-      }));
-    } else {
-      const selectedKeys = this.state.selectedKeys.concat();
-      const index = selectedKeys.indexOf(value);
-      if (value !== -1) {
-        selectedKeys.splice(index, 1);
-      }
-      this.setState({
-        selectedKeys
-      });
-    }
-  };
-
-  onOpenCheck = e =&gt; {
-    const value = e.target.value;
-    if (e.target.checked) {
-      this.setState(state =&gt; ({
-        openKeys: state.openKeys.concat(value)
-      }));
-    } else {
-      const openKeys = this.state.openKeys.concat();
-      const index = openKeys.indexOf(value);
-      if (value !== -1) {
-        openKeys.splice(index, 1);
-      }
-      this.setState({
-        openKeys
-      });
-    }
-  };
-
-  getMenu() {
-    return (
-      &lt;Menu
-        multiple
-        onSelect={this.onSelect}
-        onDeselect={this.onDeselect}
-        onOpenChange={this.onOpenChange}
-        openKeys={this.state.openKeys}
-        selectedKeys={this.state.selectedKeys}
+const nestSubMenu = (
+  &lt;SubMenu
+    title={&lt;span className="submenu-title-wrapper"&gt;offset sub menu 2&lt;/span&gt;}
+    key="4"
+    popupOffset={[10, 15]}
+  &gt;
+    &lt;MenuItem key="4-1"&gt;inner inner&lt;/MenuItem&gt;
+    &lt;Divider /&gt;
+    &lt;SubMenu
+      key="4-2"
+      title={&lt;span className="submenu-title-wrapper"&gt;sub menu 1&lt;/span&gt;}
+    &gt;
+      &lt;SubMenu
+        title={&lt;span className="submenu-title-wrapper"&gt;sub 4-2-0&lt;/span&gt;}
+        key="4-2-0"
       &gt;
-        &lt;SubMenu key="1" title="submenu1"&gt;
-          &lt;MenuItem key="1-1"&gt;item1-1&lt;/MenuItem&gt;
-          &lt;MenuItem key="1-2"&gt;item1-2&lt;/MenuItem&gt;
-        &lt;/SubMenu&gt;
-        &lt;SubMenu key="2" title="submenu2"&gt;
-          &lt;MenuItem key="2-1"&gt;item2-1&lt;/MenuItem&gt;
-          &lt;MenuItem key="2-2"&gt;item2-2&lt;/MenuItem&gt;
-        &lt;/SubMenu&gt;
-        &lt;MenuItem key="3"&gt;item3&lt;/MenuItem&gt;
-      &lt;/Menu&gt;
-    );
-  }
+        &lt;MenuItem key="4-2-0-1"&gt;inner inner&lt;/MenuItem&gt;
+        &lt;MenuItem key="4-2-0-2"&gt;inner inner2&lt;/MenuItem&gt;
+      &lt;/SubMenu&gt;
+      &lt;MenuItem key="4-2-1"&gt;inn&lt;/MenuItem&gt;
+      &lt;SubMenu
+        title={&lt;span className="submenu-title-wrapper"&gt;sub menu 4&lt;/span&gt;}
+        key="4-2-2"
+      &gt;
+        &lt;MenuItem key="4-2-2-1"&gt;inner inner&lt;/MenuItem&gt;
+        &lt;MenuItem key="4-2-2-2"&gt;inner inner2&lt;/MenuItem&gt;
+      &lt;/SubMenu&gt;
+      &lt;SubMenu
+        title={&lt;span className="submenu-title-wrapper"&gt;sub menu 3&lt;/span&gt;}
+        key="4-2-3"
+      &gt;
+        &lt;MenuItem key="4-2-3-1"&gt;inner inner&lt;/MenuItem&gt;
+        &lt;MenuItem key="4-2-3-2"&gt;inner inner2&lt;/MenuItem&gt;
+      &lt;/SubMenu&gt;
+    &lt;/SubMenu&gt;
+  &lt;/SubMenu&gt;
+);
 
-  destroy() {
+function onOpenChange(value) {
+  console.log("onOpenChange", value);
+}
+
+const children1 = [
+  &lt;SubMenu
+    title={&lt;span className="submenu-title-wrapper"&gt;sub menu&lt;/span&gt;}
+    key="1"
+  &gt;
+    &lt;MenuItem key="1-1"&gt;0-1&lt;/MenuItem&gt;
+    &lt;MenuItem key="1-2"&gt;0-2&lt;/MenuItem&gt;
+  &lt;/SubMenu&gt;,
+  nestSubMenu,
+  &lt;MenuItem key="2"&gt;1&lt;/MenuItem&gt;,
+  &lt;MenuItem key="3"&gt;outer&lt;/MenuItem&gt;,
+  &lt;MenuItem key="5" disabled&gt;
+    disabled
+  &lt;/MenuItem&gt;,
+  &lt;MenuItem key="6"&gt;outer3&lt;/MenuItem&gt;
+];
+
+const children2 = [
+  &lt;SubMenu
+    title={&lt;span className="submenu-title-wrapper"&gt;sub menu&lt;/span&gt;}
+    key="1"
+  &gt;
+    &lt;MenuItem key="1-1"&gt;0-1&lt;/MenuItem&gt;
+    &lt;MenuItem key="1-2"&gt;0-2&lt;/MenuItem&gt;
+  &lt;/SubMenu&gt;,
+  &lt;MenuItem key="2"&gt;1&lt;/MenuItem&gt;,
+  &lt;MenuItem key="3"&gt;outer&lt;/MenuItem&gt;
+];
+
+const customizeIndicator = &lt;span&gt;Add More Items&lt;/span&gt;;
+
+class CommonMenu extends React.Component {
+  state = {
+    children: children1,
+    overflowedIndicator: undefined
+  };
+  toggleChildren = () =&gt; {
     this.setState({
-      destroyed: true
+      children: this.state.children === children1 ? children2 : children1
     });
-  }
-
+  };
+  toggleOverflowedIndicator = () =&gt; {
+    this.setState({
+      overflowedIndicator:
+        this.state.overflowedIndicator === undefined
+          ? customizeIndicator
+          : undefined
+    });
+  };
   render() {
-    if (this.state.destroyed) {
-      return null;
-    }
-    const allSelectedKeys = ["1-1", "1-2", "2-1", "2-2", "3"];
-    const allOpenKeys = ["1", "2"];
-    const selectedKeys = this.state.selectedKeys;
-    const openKeys = this.state.openKeys;
-
+    const { triggerSubMenuAction } = this.props;
+    const { children, overflowedIndicator } = this.state;
     return (
       &lt;div&gt;
-        &lt;h2&gt;multiple selectable menu&lt;/h2&gt;
-
-        &lt;p&gt;
-          selectedKeys: &amp;nbsp;&amp;nbsp;&amp;nbsp;
-          {allSelectedKeys.map(k =&gt; {
-            return (
-              &lt;label key={k}&gt;
-                {k}
-                &lt;input
-                  value={k}
-                  key={k}
-                  type="checkbox"
-                  onChange={this.onCheck}
-                  checked={selectedKeys.indexOf(k) !== -1}
-                /&gt;
-              &lt;/label&gt;
-            );
-          })}
-        &lt;/p&gt;
-
-        &lt;p&gt;
-          openKeys: &amp;nbsp;&amp;nbsp;&amp;nbsp;
-          {allOpenKeys.map(k =&gt; {
-            return (
-              &lt;label key={k}&gt;
-                {k}
-                &lt;input
-                  value={k}
-                  type="checkbox"
-                  onChange={this.onOpenCheck}
-                  checked={openKeys.indexOf(k) !== -1}
-                /&gt;
-              &lt;/label&gt;
-            );
-          })}
-        &lt;/p&gt;
-
-        &lt;div style={{ width: 400 }}&gt;{this.getMenu()}&lt;/div&gt;
+        {this.props.updateChildrenAndOverflowedIndicator &amp;&amp; (
+          &lt;div&gt;
+            &lt;button onClick={this.toggleChildren}&gt;toggle children&lt;/button&gt;
+            &lt;button onClick={this.toggleOverflowedIndicator}&gt;
+              toggle overflowedIndicator
+            &lt;/button&gt;
+          &lt;/div&gt;
+        )}
+        &lt;Menu
+          isRtl
+          onClick={handleClick}
+          triggerSubMenuAction={triggerSubMenuAction}
+          onOpenChange={onOpenChange}
+          selectedKeys={["3"]}
+          mode={this.props.mode}
+          openAnimation={this.props.openAnimation}
+          defaultOpenKeys={this.props.defaultOpenKeys}
+          overflowedIndicator={overflowedIndicator}
+        &gt;
+          {children}
+        &lt;/Menu&gt;
       &lt;/div&gt;
     );
   }
 }
 
-ReactDOM.render(&lt;Test /&gt;, document.getElementById("__react-content"));
+CommonMenu.propTypes = {
+  mode: PropTypes.string,
+  openAnimation: PropTypes.oneOfType([PropTypes.string, PropTypes.object]),
+  triggerSubMenuAction: PropTypes.string,
+  defaultOpenKeys: PropTypes.arrayOf(PropTypes.string),
+  updateChildrenAndOverflowedIndicator: PropTypes.bool
+};
+
+function render(container) {
+  const horizontalMenu = (
+    &lt;CommonMenu
+      mode="horizontal"
+      // use openTransition for antd
+      openAnimation="slide-up"
+    /&gt;
+  );
+
+  const horizontalMenu2 = (
+    &lt;CommonMenu
+      mode="horizontal"
+      // use openTransition for antd
+      openAnimation="slide-up"
+      triggerSubMenuAction="click"
+      updateChildrenAndOverflowedIndicator
+    /&gt;
+  );
+
+  // const verticalMenu = &lt;CommonMenu mode="vertical" /&gt;;
+  const verticalMenu = &lt;CommonMenu mode="vertical" openAnimation="zoom" /&gt;;
+
+  const inlineMenu = (
+    &lt;CommonMenu
+      mode="inline"
+      defaultOpenKeys={["1"]}
+      openAnimation={animation}
+    /&gt;
+  );
+
+  ReactDOM.render(
+    &lt;div style={{ margin: 20, direction: "rtl" }}&gt;
+      &lt;h2&gt;antd menu&lt;/h2&gt;
+      &lt;div&gt;
+        &lt;h3&gt;horizontal&lt;/h3&gt;
+
+        &lt;div style={{ margin: 20 }}&gt;{horizontalMenu}&lt;/div&gt;
+        &lt;h3&gt;horizontal and click&lt;/h3&gt;
+
+        &lt;div style={{ margin: 20 }}&gt;{horizontalMenu2}&lt;/div&gt;
+        &lt;h3&gt;vertical&lt;/h3&gt;
+
+        &lt;div style={{ margin: 20, width: 200 }}&gt;{verticalMenu}&lt;/div&gt;
+        &lt;h3&gt;inline&lt;/h3&gt;
+
+        &lt;div style={{ margin: 20, width: 400 }}&gt;{inlineMenu}&lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt;,
+    container
+  );
+}
+
+render(reactContainer);
 </code></pre></div>
   </div>
   <a href="http://github.com/react-component/menu">
@@ -432,7 +516,7 @@ ReactDOM.render(&lt;Test /&gt;, document.getElementById("__react-content"));
   </a>
   <script>FastClick.attach(document.body);</script>
   <script src="../common.js?nowrap"></script>
-  <script src="selectedKeys.js?nowrap"></script>
+  <script src="antd_rtl.js?nowrap"></script>
 </body>
 
 </html>
