--- a/examples/antd_rtl.html
+++ b/examples/antd_rtl.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>antd_rtl.js - example - rnb-rc-menu@7.4.28</title>
+  <title>antd_rtl.js - example - rnb-rc-menu@7.4.29</title>
   <meta name="viewport"
         content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta charset="utf-8"/>
@@ -263,7 +263,7 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
 <body>
   <div class="container">
     <div class="header">
-      <h1>rnb-rc-menu@7.4.28</h1>
+      <h1>rnb-rc-menu@7.4.29</h1>
 
       <p>menu ui component for react</p>
     </div>
@@ -329,7 +329,7 @@ const nestSubMenu = (
     key="4"
     popupOffset={[10, 15]}
   &gt;
-    &lt;MenuItem key="4-1"&gt;inner inner&lt;/MenuItem&gt;
+    &lt;MenuItem key="4-1"&gt;inner inner loooooooooooooong&lt;/MenuItem&gt;
     &lt;Divider /&gt;
     &lt;SubMenu
       key="4-2"
@@ -373,13 +373,13 @@ const children1 = [
     &lt;MenuItem key="1-1"&gt;0-1&lt;/MenuItem&gt;
     &lt;MenuItem key="1-2"&gt;0-2&lt;/MenuItem&gt;
   &lt;/SubMenu&gt;,
-  nestSubMenu,
   &lt;MenuItem key="2"&gt;1&lt;/MenuItem&gt;,
   &lt;MenuItem key="3"&gt;outer&lt;/MenuItem&gt;,
   &lt;MenuItem key="5" disabled&gt;
     disabled
   &lt;/MenuItem&gt;,
-  &lt;MenuItem key="6"&gt;outer3&lt;/MenuItem&gt;
+  &lt;MenuItem key="6"&gt;outer3&lt;/MenuItem&gt;,
+  nestSubMenu
 ];
 
 const children2 = [
